[gd_scene load_steps=8 format=3 uid="uid://onv3ylysb86m"]

[ext_resource type="Script" path="res://Scripts/Environment/BreakableObject.gd" id="1_e5vff"]
[ext_resource type="Texture2D" uid="uid://dtl5q628s3j4k" path="res://Art/Objects/wooden log.png" id="1_u82lr"]
[ext_resource type="PackedScene" uid="uid://cdxbtkj5u7k1v" path="res://Scenes/Components/HealthComponent.tscn" id="2_qrpcr"]
[ext_resource type="PackedScene" uid="uid://u343rxod55s" path="res://Scenes/Components/HitboxComponent.tscn" id="3_yg4eo"]
[ext_resource type="PackedScene" uid="uid://c4trest17eiso" path="res://Scenes/Components/HealthBar.tscn" id="4_86txv"]
[ext_resource type="PackedScene" uid="uid://yxxfogk31m4r" path="res://Scenes/Interactables/TrashSpawner.tscn" id="6_riads"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bccb0"]
size = Vector2(1178, 331.526)

[node name="BreakableObject" type="Node2D" groups=["Enemy"]]
scale = Vector2(0.0626647, 0.0626647)
script = ExtResource("1_e5vff")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 0.596171
texture = ExtResource("1_u82lr")

[node name="CollisionShape2D" type="StaticBody2D" parent="."]
position = Vector2(6.03972, -4.76385)
rotation = -0.000479903
collision_layer = 521
collision_mask = 2

[node name="LogCollision" type="CollisionShape2D" parent="CollisionShape2D"]
position = Vector2(6.03972, -4.76385)
rotation = -0.000479903
scale = Vector2(0.901771, 0.901771)
shape = SubResource("RectangleShape2D_bccb0")

[node name="LogHealth" parent="." instance=ExtResource("2_qrpcr")]
Max_health = 10.0

[node name="LogHitbox" parent="." node_paths=PackedStringArray("Health") instance=ExtResource("3_yg4eo")]
collision_layer = 4
Health = NodePath("../LogHealth")
Damage_interval = 0.2
Substitute_damage = 1.0

[node name="LogHit" type="CollisionShape2D" parent="LogHitbox"]
position = Vector2(6.03972, -4.76385)
rotation = -0.000479903
shape = SubResource("RectangleShape2D_bccb0")

[node name="LogHealthBar" parent="." node_paths=PackedStringArray("Health_component") instance=ExtResource("4_86txv")]
offset_left = -434.0
offset_top = 176.0
offset_right = -404.0
offset_bottom = 180.0
scale = Vector2(29.1054, 17.0207)
Health_component = NodePath("../LogHealth")

[node name="TrashSpawn" parent="." instance=ExtResource("6_riads")]
